[package]
name = "eddacraft-tui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared Ratatui component library for the EddaCraft product family"
repository = "https://github.com/eddacraft/eddacraft"
readme = "README.md"
keywords = ["tui", "ratatui", "widgets", "terminal"]
categories = ["command-line-interface"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
